--- a/templates/index.html
+++ b/templates/index.html
@@ -11,14 +11,14 @@
         <h1>{{ heading }}</h1>
         <p class="subtitle">Streamline your procurement process with our easy-to-use request system</p>
         
+        {% if success_message %}
+        <div class="success-message">
+            <p>{{ success_message }}</p>
+        </div>
+        {% endif %}
+        
         <div class="form-section">
-            <h2>Purchase Request Form</h2>
-            
-            {% if success_message %}
-            <div class="success-message">
-                <p>{{ success_message }}</p>
-            </div>
-            {% endif %}
+            <h2>Your Information</h2>
             
             <form method="POST" action="/submit-request">
                 <div class="form-group">
@@ -61,7 +61,7 @@
                 </div>
                 
                 <div class="form-group">
-                    <button type="submit" class="btn">Submit Request</button>
+                    <button type="submit" class="btn">Continue to Purchase Requests</button>
                 </div>
             </form>
         </div>
